Specify Python version in HF workflow

--- a/.github/workflows/compile_huggingface.yml
+++ b/.github/workflows/compile_huggingface.yml
@@ -9,10 +9,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: 'main'
-      - name: installing deps
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+      - name: Upgrade pip
+        run: pip install --upgrade pip
+      - name: Install dependencies
         run: pip install -r huggingface/requirements.txt
-      - name: installing torch cpu only
-        run: pip install torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
+      - name: Install torch cpu only
+        run: pip install torch==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
       - name: Combining Files
         run: python huggingface/combine_files.py -o huggingface/huggingface_wrapper.py
       - name: Formatting generated code
